スターボタンを押して色を変えられるように修正

--- a/components/star-button/star-button.module.scss
+++ b/components/star-button/star-button.module.scss
@@ -5,7 +5,12 @@
 //   border: none;
 // }
 
-.faStar {
+.orange {
   color: orange;
+  cursor: pointer;
+}
+
+.grey {
+  color: grey;
   cursor: pointer;
 }
