--- a/components/card/card.module.scss
+++ b/components/card/card.module.scss
@@ -4,8 +4,8 @@
 
 .starButton {
   position: absolute;
-  right: 0.5rem;
-  top: 0.3rem;
+  right: 1.2rem;
+  top: 1.5rem;
   z-index: 10;
 }
 
@@ -23,15 +23,20 @@
   z-index: 1;
   border: 0 none;
 
-  -webkit-transition: transform 300ms cubic-bezier(0.34, 2, 0.6, 1),
+  -webkit-transition:
+    transform 300ms cubic-bezier(0.34, 2, 0.6, 1),
     box-shadow 200ms ease;
-  -moz-transition: transform 300ms cubic-bezier(0.34, 2, 0.6, 1),
+  -moz-transition:
+    transform 300ms cubic-bezier(0.34, 2, 0.6, 1),
     box-shadow 200ms ease;
-  -o-transition: transform 300ms cubic-bezier(0.34, 2, 0.6, 1),
+  -o-transition:
+    transform 300ms cubic-bezier(0.34, 2, 0.6, 1),
     box-shadow 200ms ease;
-  -ms-transition: transform 300ms cubic-bezier(0.34, 2, 0.6, 1),
+  -ms-transition:
+    transform 300ms cubic-bezier(0.34, 2, 0.6, 1),
     box-shadow 200ms ease;
-  transition: transform 300ms cubic-bezier(0.34, 2, 0.6, 1),
+  transition:
+    transform 300ms cubic-bezier(0.34, 2, 0.6, 1),
     box-shadow 200ms ease;
 
   &:not(.cardPlain):hover {
